turtleart.square.Square.scala.code
override def run() {
  forward(1)
  right()
  forward(1)
  right()
  forward()
  right()
  forward()
}